--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 #container {
     display: flex;
     flex-wrap: wrap;
+    height: 960px;
+    width: 960px;
 }
 
 div div{
-    flex: 1 0 5%;
-    margin: 0px;
-    height: 60px;
-    width: 60px;
-    border: solid black;
+    margin: 0px;  
+}
+
+.current {
+    background-color: aqua;
 }
